Added api definition for vitals
